# Django-Finance-App

./: .env.example  .gitignore  LICENSE  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml  hello.py  justfile  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  tailwind.config.js
config/: asgi.py  celery.py  urls.py  wsgi.py
config/django/: base.py  dev.py  prod.py  test.py
config/settings/: celery.py  email_sending.py  rest.py  sentry.py  smtp4dev.py  swagger.py
docker/: dev.Dockerfile  prod.Dockerfile  web_entrypoint.sh
finance_config/api/: apps.py  exception_handlers.py  mixins.py  urls.py
finance_config/authentication/: apps.py
finance_config/common/: apps.py  models.py  services.py
finance_config/common/migrations/: 0001_initial.py
finance_config/core/: apps.py  serializers.py
finance_config/core/migrations/: 0001_initial.py
finance_config/core/signals/: handlers.py
finance_config/tracker/: admin.py  apps.py  charting.py  factories.py  filters.py  forms.py  managers.py  models.py  resources.py  urls.py  views.py
finance_config/tracker/management/commands/: generate_transactions.py
finance_config/tracker/migrations/: 0001_initial.py  0002_alter_transaction_options.py
finance_config/tracker/templates/tracker/: base.html  charts.html  index.html  transactions-list.html
finance_config/tracker/templates/tracker/partials/: charts-container.html  create-transaction.html  import-transaction.html  navbar.html  transaction-delete.html  transaction-form.html  transaction-success.html  transactions-container.html  update-transaction.html
finance_config/utils/tests/: conftest.py  test_models.py  test_views.py
locustfiles/: browse_products.py
scripts/: bootstrap.sh
static/js/: htmx.min.js
static/src/: output.css
