[project]
name = "django-finance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=24.2.0",
    "boto3>=1.35.55",
    "dj-database-url>=2.3.0",
    "django>=5.1.3",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-storages>=1.14.4",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "djoser>=2.2.3",
    "drf-jwt>=1.19.2",
    "drf-nested-routers>=0.94.1",
    "drf-spectacular>=0.27.2",
    "factory-boy>=3.3.1",
    "gunicorn>=23.0.0",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "sentry-sdk>=2.18.0",
    "whitenoise>=6.8.2",
    "faker>=30.8.2",
    "ruff>=0.7.3",
    "django-allauth>=65.2.0",
    "django-widget-tweaks>=1.5.0",
    "django-debug-toolbar>=4.4.6",
    "django-htmx>=1.21.0",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "django-template-partials>=24.4",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "django-import-export>=4.3.1",
    "tablib[all]>=3.7.0",
]

[tool.uv]
dev-dependencies = [
    "boto3-stubs>=1.35.55",
    "django-silk>=5.3.0",
    "django-stubs>=5.1.1",
    "djangorestframework-stubs>=3.15.1",
    "flake8>=7.1.1",
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "locust>=2.32.1",
    "model-bakery>=1.20.0",
    "mypy>=1.13.0",
    "pytest-django>=4.9.0",
    "pytest-postgresql>=6.1.1",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_app"]
