[project]
name = "django-finance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.3",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-storages>=1.14.4",
    "factory-boy>=3.3.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.8.2",
    "faker>=30.8.2",
    "ruff>=0.7.3",
    "django-allauth>=65.2.0",
    "django-widget-tweaks>=1.5.0",
    "django-debug-toolbar>=4.4.6",
    "django-htmx>=1.21.0",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "django-template-partials>=24.4",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "django-import-export>=4.3.1",
    "tablib[all]>=3.7.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "pytest-postgresql>=6.1.1",
    "pytest-watch>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_app"]
